; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_tests.c_add_invalid_filename.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_tests.c_add_invalid_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@.str = private unnamed_addr constant [10 x i8] c"./invalid\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @add_invalid_filename to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_invalid_filename(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_5__, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = bitcast %struct.TYPE_5__* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 bitcast (%struct.TYPE_5__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @git_repository_index(i32** %5, i32* %8)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32*, i32** %5, align 8
  %12 = call i64 @git_index_entrycount(i32* %11)
  %13 = icmp eq i64 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @cl_assert(i32 %14)
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @git_buf_joinpath(%struct.TYPE_5__* %6, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* %16)
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @cl_git_mkfile(i32 %19, i32* null)
  %21 = load i32*, i32** %5, align 8
  %22 = load i8*, i8** %4, align 8
  %23 = call i32 @git_index_add_bypath(i32* %21, i8* %22)
  %24 = call i32 @cl_git_fail(i32 %23)
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @p_unlink(i32 %26)
  %28 = call i32 @cl_must_pass(i32 %27)
  %29 = load i32*, i32** %5, align 8
  %30 = call i64 @git_index_entrycount(i32* %29)
  %31 = icmp eq i64 %30, 0
  %32 = zext i1 %31 to i32
  %33 = call i32 @cl_assert(i32 %32)
  %34 = call i32 @git_buf_dispose(%struct.TYPE_5__* %6)
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 @git_index_free(i32* %35)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_repository_index(i32**, i32*) #2

declare dso_local i32 @cl_assert(i32) #2

declare dso_local i64 @git_index_entrycount(i32*) #2

declare dso_local i32 @git_buf_joinpath(%struct.TYPE_5__*, i8*, i8*) #2

declare dso_local i32 @cl_git_mkfile(i32, i32*) #2

declare dso_local i32 @cl_git_fail(i32) #2

declare dso_local i32 @git_index_add_bypath(i32*, i8*) #2

declare dso_local i32 @cl_must_pass(i32) #2

declare dso_local i32 @p_unlink(i32) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_5__*) #2

declare dso_local i32 @git_index_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
